--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "rocksdb"]
 	path = librocksdb_sys/rocksdb
-	url = https://github.com/tikv/rocksdb.git
-	branch = 6.29.tikv
+	url = https://github.com/BornChanger/rocksdb.git
+	branch = compaction_filter_debug
 
 [submodule "titan"]
 	path = librocksdb_sys/libtitan_sys/titan
